--- a/public/css/nav_style.css
+++ b/public/css/nav_style.css
@@ -14,8 +14,11 @@
   .logo {
     width: 50px;
     margin-right: auto;
-    
   }
+
+  .logo:hover{
+    transform: scale(1.1);
+}
   
   .nav__links {
     list-style: none;
@@ -26,7 +29,7 @@
   .cta,
   .overlay__content a {
     font-family: "Montserrat", sans-serif;
-    font-weight: 500;
+    font-weight: 800;
     color: #000000;
     text-decoration: none;
   }
