--- a/public/css/student.css
+++ b/public/css/student.css
@@ -17,6 +17,12 @@ header h1 {
     font-size: 36pt;
     }
 
+h1 {
+    text-align: center;
+    padding-bottom : 30px;
+    font-size: 36pt;
+}
+
 
 .home {
     padding: 10px 0;
