--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -27,8 +27,15 @@
     transition: 0.5;
 }
 
+.content h2{
+    font-size: 30px;
+    color: rgb(0, 145, 75);
+    font-weight: 600;
+    transition: 0.5;
+}
+
 .content h1:hover{
-    -webkit-text-stroke: 2px white;
+    -webkit-text-stroke: 2px rgb(0, 145, 75);
     color: transparent;
 }
 
@@ -36,14 +43,21 @@
     text-decoration: none;
     display: inline-block;
     color: #ffffff;
-    font-size: px;
+    font-size: 20px;
     font-weight: 600; 
     border: 2px solid #ffffff;
     padding: 14px 70px;
     transition: all .6s ease-in-out;
     border-radius: 50px;
+    border-width: 3px;
     margin-top: 20px;
-    margin-bottom: 400px;
+    margin-bottom: 300px;
+}
+
+.content a:hover{
+    color: rgb(0, 145, 75);
+    border-color: rgb(0, 145, 75);
+    z-index: -1;
 }
 
 .back-video{
